--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ffmpeg (7:3.4.2-9) unstable; urgency=medium
+
+  * fixes for v4l2_m2m Exynos MFC
+
+ -- memeka <mihailescu2m@gmail.com>  Sat, 30 Jun 2018 08:13:11 +0930
+
 ffmpeg (7:3.4.2-2) unstable; urgency=medium
 
   [ James Cowgill ]
